feat: Endpoint para obtener rutas
GET: v1/routes

Se crearon dos funciones en la clase RouteModel

getRoutes: Retorna las rutas padre, todas aquellas que no tienen rutas
padres.

getChildren: Usa recursividad para obtener las rutas hijo y verifica que
el usuario tenga los permisos para poder acceder a dicha ruta.
