# app/Database/Seeds/RoutesSettings.php
@@ -59,6 +59,19 @@ class RoutesSettings extends CustomSeeder
                 "updated_by"   => $id_user,
             ],
             [
+                "id_parent_route" => $this->getRouteIdByName("groups"),
+                "label"        => "Asignar permisos a grupo",
+                "name"         => "groups-assign-permissions",
+                "path"         => "/groups-assign-permissions",
+                "icon"         => FA_SHIELD,
+                "priority"     => 1,
+                "type"         => "ALL",
+                "show_in_menu" => 0,
+                "is_active"    => 1,
+                "created_by"   => $id_user,
+                "updated_by"   => $id_user,
+            ],
+            [
                 "id_parent_route" => $this->getRouteIdByName("settings"),
                 "label"        => "Ajustes de la aplicación",
                 "name"         => "app-settings",
